fix replacedby filter + save workflow viewers